@@ -126,7 +126,7 @@ public class LocalOfficeWindow
             // set real parent
             XVclWindowPeer xVclWindowPeer = UnoRuntime.queryInterface(
                                XVclWindowPeer.class, mWindow);
-            xVclWindowPeer.setProperty( "PluginParent", new Long(getNativeWindow()) );
+            xVclWindowPeer.setProperty( "PluginParent", Long.valueOf(getNativeWindow()) );
             bPeer = true;
 
                    // show document window
@@ -147,7 +147,7 @@ public class LocalOfficeWindow
             // set null parent
             XVclWindowPeer xVclWindowPeer = UnoRuntime.queryInterface(
                                XVclWindowPeer.class, mWindow);
-            xVclWindowPeer.setProperty( "PluginParent", new Long(0) );
+            xVclWindowPeer.setProperty( "PluginParent", Long.valueOf(0) );
             bPeer = false;
         }
     }
